<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptivePortalAnalysis">


    <TextView
        android:id="@+id/noCaptivePortalFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/NoCaptivePortalFound"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"

        android:visibility="invisible"
        android:gravity="center"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b1_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/downloadingResources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/downloading_resources_please_wait"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"

        android:visibility="invisible"
        android:gravity="center"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b1_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/end"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"

        android:visibility="invisible"
        android:gravity="center"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b1_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/unneededFilesDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/afterUploading"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"

        android:visibility="invisible"
        android:gravity="center"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b1_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/closeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/closeApp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"

        android:visibility="invisible"
        android:gravity="center"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b1_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/internetAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/internetAvailable"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"

        android:visibility="invisible"
        android:gravity="center"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b1_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/b1_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black"
        android:onClick="upload"
        android:text="@string/uplaod"
        android:visibility="invisible"

        app:layout_constraintTop_toTopOf="@+id/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareZip"
        android:text="ZIP teilen"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/webView"
        app:layout_constraintStart_toStartOf="@+id/webView" />

    <Button
        android:id="@+id/b2_deleteUnneededFolders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black"
        android:onClick="deleteUnneededFolders"
        android:text="@string/delete_unneeded_folders"
        android:visibility="invisible"

        app:layout_constraintTop_toTopOf="@+id/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></WebView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>